Rifle Recoil animation preparation
I don't care that recoil doesn't work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="game"></canvas>
+    <span style="pointer-events: auto;">...</span>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
