--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <button class="openDialog" onclick="window.dialog.showModal();">
+      Open Dialog
+    </button>
+
+    <dialog id="dialog">
+      <h2>Hello.</h2>
+      <p>
+        A CSS-only modal based on the
+        <a
+          href="https://developer.mozilla.org/es/docs/Web/CSS/::backdrop"
+          target="_blank"
+          >::backdrop</a
+        >
+        pseudo-class. Hope you find it helpful.
+      </p>
+      <p>
+        You can also change the styles of the <code>::backdrop</code> from the
+        CSS.
+      </p>
+      <button onclick="window.dialog.close();" aria-label="close" class="x">
+        ❌
+      </button>
+    </dialog>
+
     <canvas id="game"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/gifuct-js/dist/gifuct-js.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill/dist/polyfill.min.js"></script>
