--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <canvas id="game"></canvas>
+    <div id="modal-container">
+      <div class="modal">
+        <button class="modal__close" id="modal-close">X</button>
+        <div class="modal__details">
+          <h1 class="modal__title">Military Shop</h1>
+        </div>
+
+        <div class="modal__content" id="shop-items"></div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/gifuct-js/dist/gifuct-js.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill/dist/polyfill.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
