All feats implemented, moving to QA part

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="game"></canvas>
+    <div id="explosion-container"></div>
     <div id="modal-container">
       <div class="modal">
         <button class="modal__close" id="modal-close">X</button>
