Fix: Reloading & Terrorist Boundary pass limit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <canvas id="game"></canvas>
     <div id="explosion-container"></div>
+    <div id="reload-screen">
+      <div>
+        <img class="reload_spinner" src="/reload.webp" />
+        <h1 class="reload__text">RELOADING</h1>
+      </div>
+    </div>
     <div id="modal-container">
       <div class="modal">
         <button class="modal__close" id="modal-close">X</button>
