--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sinwar-logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genocide</title>
+    <meta name="description" content="Play Palestine Shooter - an action-packed game set in a dynamic and challenging environment. Join now for an immersive shooting experience!">
+    <meta name="keywords" content="shooter game, Israel Gaza shooter, palestine shooter, stand with Israel, destroy HAMAS game, HAMAS shooter, action game, online shooter, play shooter game">
+    <link rel="icon" type="image/webp" href="/sinwar-logo.webp" />
+    <title>Palestine Shooter Game | Play Now</title>
   </head>
   <body>
     <canvas id="game"></canvas>
     <div id="explosion-container"></div>
     <div id="reload-screen">
       <div>
-        <img class="reload_spinner" src="/reload.webp" />
-        <h1 class="reload__text">RELOADING</h1>
+        <img class="reload_spinner" src="/reload.webp" alt="Reloading Spinner" />
+        <h1 class="reload__text">RIFLE RELOADING</h1>
       </div>
     </div>
     <div id="modal-container">
